--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 A little mashup using Sincerial to personalize twitter streams.
 
 TODO:
-[ ] Send tweets to Sincerial for vectorization
-[ ] Send vectorized tweets to Sincerial for Ranking
+[X] Create sinatra application for vectorization and ranking
+[X] Refactor rankers to handle prefetched items
+[ ] Send tweets to Sincerial for vectorization and ranking
  - Status, author, timestamp 
 [ ] Gather interest clicks
 [ ] Send interest clicks to Sincerial
