--- a/README
+++ b/README
@@ -8,6 +8,10 @@ TODO:
 [X] Gather interest clicks
 [X] Send interest clicks to Sincerial
 [X] Sincerial profile based on interest clicks
+[ ] Author as a tagged element in product vector
+[ ] Public timeline if not logged in
+[ ] Menubar with "sign in" if not logged in and "sign out" if logged in
+[ ] User servlet handling "sign in" and "sign out" with cookie
 
 If result is good:
 [ ] User creation (Sincerial)
