--- a/README
+++ b/README
@@ -16,7 +16,7 @@ TODO:
 [X] "Sign in" or "Sign out" determined by servlet and shown by index.jsp
 [X] User servlet handling "sign in" through HttpSession
 [X] User servlet handling "Sing out" through HttpSession
-[ ] CSS for the looksTM
+[X] CSS for the looksTM
 
 If result is good:
 [ ] OAuth with Twitter
