Proper sign in form and handling

--- a/README
+++ b/README
@@ -17,6 +17,8 @@ TODO:
 [X] User servlet handling "sign in" through HttpSession
 [X] User servlet handling "Sing out" through HttpSession
 [X] CSS for the looksTM
+[ ] Include timestamp for ranking
+[ ] 
 
 If result is good:
 [ ] OAuth with Twitter
